--- a/index.html
+++ b/index.html
@@ -5,13 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p>moja strona</p>
-    
-    <p>paragraf z galezi master</p>
-
-    <p> z gałezi newbranch</p>
-    
-    <p> nowy pragraf</p>
+    <p>Moje Portfolio</p>
 
 </body>
 </html>
