formularz nowy + wiadomosc

--- a/formularz-html/index.html
+++ b/formularz-html/index.html
@@ -6,15 +6,18 @@
 </head>
 <body>
    
-   <form action="mailto:ewelina.noga@gmail.com">
+   <form action="mailto:https://formspree.io/">
        <label for="imie">Imię:</label>
-       <input type="text" name="imie" id="imie"/> 
+       <input type="text" name="imie" id="imie"/> <br /> 
        <label for="nazwisko">Nazwisko:</label> 
-       <input type="text" name="nazwisko" id="nazwisko"/>
+       <input type="text" name="nazwisko" id="nazwisko"/> <br />
        <label for="email">email:</label>
        <input type="text" name="email" id="email"/>
        <label for="telefon">Telefon:</label>
-       <input type="text" name="telefon" id="telefon"/>
+       <input type="text" name="telefon" id="telefon"/> <br />
+       <label for="wiadomosc">Wiadomość:</label>
+       <input type="text" name="wiadomosc" id="wiadomosc"/> <br />
+       <textarea maxlenght="1000" />
        
        
        <input type="submit" value="Wyślij">
