formolarz nowy+wiadomosc'

--- a/formularz-html/index.html
+++ b/formularz-html/index.html
@@ -12,11 +12,10 @@
        <label for="nazwisko">Nazwisko:</label> 
        <input type="text" name="nazwisko" id="nazwisko"/> <br />
        <label for="email">email:</label>
-       <input type="text" name="email" id="email"/>
+       <input type="text" name="email" id="email"/> <br />
        <label for="telefon">Telefon:</label>
        <input type="text" name="telefon" id="telefon"/> <br />
        <label for="wiadomosc">Wiadomość:</label>
-       <input type="text" name="wiadomosc" id="wiadomosc"/> <br />
        <textarea maxlenght="1000" />
        
        
