--- a/formularz-html/index.html
+++ b/formularz-html/index.html
@@ -16,7 +16,7 @@
        <label for="telefon">Telefon:</label>
        <input type="text" name="telefon" id="telefon"/> <br />
        <label for="wiadomosc">Wiadomość:</label>
-       <textarea maxlenght="1000" />
+       <textarea maxlenght="1000" /> <br />
        <input type="submit" value="Wyślij">
    </form>
     
