--- a/formularz-html/index.html
+++ b/formularz-html/index.html
@@ -17,8 +17,7 @@
        <input type="text" name="telefon" id="telefon"/> <br />
        <label for="wiadomosc">Wiadomość:</label>
        <textarea maxlenght="1000" /> <br />
-       <label for="wyslij">Wyślij:</label>
-       <input type="submit" value="wyslij">
+       <input type="submit" value="Wyślij">
    </form>
     
 </body>
