--- a/formularz-html/index.html
+++ b/formularz-html/index.html
@@ -12,11 +12,12 @@
        <label for="nazwisko">Nazwisko:</label> 
        <input type="text" name="nazwisko" id="nazwisko"/> <br />
        <label for="email">email:</label>
-       <input type="text" name="email" id="email"/> <br />
+       <input type="email" name="email" id="email"/> <br />
        <label for="telefon">Telefon:</label>
        <input type="text" name="telefon" id="telefon"/> <br />
        <label for="wiadomosc">Wiadomość:</label>
-       <textarea maxlenght="1000" /> <br />
+       <textarea name="message" maxlenght="1000" /> <br />
+       
        <input type="submit" value="Wyślij">
    </form>
     
