--- a/formularz-html/index.html
+++ b/formularz-html/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
    
-   <form action="mailto:https://formspree.io/ewelina.noga@gmail.com"
+   <form action="https://formspree.io/ewelina.noga@gmail.com"
       method="POST">
        <label for="imie">Imię:</label>
        <input type="text" name="imie" id="imie"/> <br /> 
