formularz poprawki kobieta mężczyzna

--- a/formularz/index.html
+++ b/formularz/index.html
@@ -28,9 +28,13 @@
         <option value="gdansk">Gdańsk</option>
         </select>
 
-        <br/><label for="plec">Płeć:</label>
-        <input type="radio" name="plec" id="kobieta" value="kobieta" />Kobieta
-        <input type="radio" name="plec" id="mezczyzna" value="mezczyzna" />Mężczyzna
+        <fieldest>
+        <br/><legend>Płeć:</legend>
+        <label for="kobieta">Kobieta</label>
+        <input type="radio" name="plec" id="kobieta" value="kobieta" />
+        <label for="mezczyzna">Mężczyzna</label>
+        <input type="radio" name="plec" id="mezczyzna" value="mezczyzna" />
+        </fieldest>
 
         <br/><label for="zgoda">Zgoda na dane osobowe:</label>
         <input type="checkbox" name="zgoda" id="zgoda" value="zgadzam-sie">Zgadzam się
