rwe-zadanie domowe

--- a/formularz/index.html
+++ b/formularz/index.html
@@ -29,11 +29,11 @@
         </select>
 
         <fieldest>
-        <br/><legend>Płeć:</legend>
-        <label for="kobieta">Kobieta</label>
-        <input type="radio" name="plec" id="kobieta" value="kobieta" />
-        <label for="mezczyzna">Mężczyzna</label>
-        <input type="radio" name="plec" id="mezczyzna" value="mezczyzna" />
+            <legend>Płeć:</legend>
+            <label for="kobieta">Kobieta</label>
+            <input type="radio" name="plec" id="kobieta" value="kobieta" />
+            <label for="mezczyzna">Mężczyzna</label>
+            <input type="radio" name="plec" id="mezczyzna" value="mezczyzna" />
         </fieldest>
 
         <br/><label for="zgoda">Zgoda na dane osobowe:</label>
