--- a/moje-portfolio-bootstrap/index.html
+++ b/moje-portfolio-bootstrap/index.html
@@ -43,7 +43,7 @@
 
     <header id="main-header">
         <div class="inner">
-            <h1>Ewelina <span id="nazwisko">Noga</span></h1>
+            <h1>Jan <span id="nazwisko">Kowalski</span></h1>
             <h2>Front-End Developer</h2>
         </div>
     </header>
@@ -159,16 +159,16 @@
 
     <section id="dane" class="text-left">
         <div class="container">
-            <h6>Ewelina <span>Noga</span></h6>
+            <h6>Jan <span>Kowalski</span></h6>
             <div class="row">
                 <div class="col-sm-6">
                     <div id="dane-adres" class="dane-dane">
-                        <p>ul. Dywizjonu 303 139/157</p>
+                        <p>ul. XXXXXXXX 000/000</p>
                         <p>01-470 Warszawa
                             <p/>
                     </div>
                     <div id="dane-kontakt" class="dane-dane">
-                        <p>tel: 531 020 543</p>
+                        <p>tel: 000 000 000</p>
                         <p>e-mail:<span id="email-lewa-strona">ewelina.noga@gmail.com</span></p>
                     </div>
                 </div>
@@ -179,7 +179,7 @@
 
                         <input type="email" name="mail" placeholder="  E-mail" required id="field-required" />
 
-                        <textarea name="wiadomosc" maxlength="1000" placeholder=" Treść wiadomości" required id="field-required"> </textarea>
+                        <textarea name="wiadomosc" maxlength="1000" placeholder=" Treść wiadomości" required id="field-required"></textarea>
 
                         <input type="submit" value="WYŚLIJ" id="przycisk">
                     </form>
